# poushkine

./: .flake8  .gitattributes  .gitignore  LICENSE  README.md  poems.txt  pyproject.toml  train.py
src/poushkine/: attention.py  dataloader.py  model.py  text2vec.py  tokenizer.py  trainer.py
