[tool.poetry]
name = "poushkine"
version = "0.1.0"
description = ""
authors = ["Andrei Letenkov <andletenkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
tqdm = "^4.65.0"
torch = [
    { url="https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp310-cp310-win_amd64.whl", python=">=3.10", markers="sys_platform == 'win32'"},
    { version = "=2.0.1", markers = "sys_platform == 'darwin'" },
]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
docformatter = "^1.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
